--- a/fala-cidadao/Views/Usuarios/CadastroComum.cshtml
+++ b/fala-cidadao/Views/Usuarios/CadastroComum.cshtml
@@ -1,17 +1,14 @@
 ﻿@model fala_cidadao.Models.Usuario
 
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Cadastro de Usuário";
 }
 
-<h1>Login</h1>
+<h1>Cadastro de Usuário</h1>
 
-<h4>Usuário</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Login">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="CadastroComum" method="post">
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
@@ -19,20 +16,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="Senha" class="control-label"></label>
-                <input asp-for="Senha" class="form-control" />
+                <input asp-for="Senha" type="password" class="form-control" />
                 <span asp-validation-for="Senha" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Acessar" class="btn btn-success" />
-            </div>
-            <div class="form-group">
-                <a asp-controller="Usuarios" asp-action="CadastroComum" class="btn btn-warning">Criar Nova Conta</a>
+                <input type="submit" value="Cadastrar" class="btn btn-primary" />
             </div>
         </form>
-        <h3>@ViewBag.Message</h3>
     </div>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
